# rust-ffi-with-cmake-example

./: .gitignore  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
ffi-example/: Cargo.toml  index.html
ffi-example-sys/: Cargo.toml  build.rs
ffi-example-sys/src/: lib.rs
ffi-example-sys/src/c/: CMakeLists.txt  all.h
ffi-example-sys/src/c/array/: CMakeLists.txt
ffi-example-sys/src/c/string/: CMakeLists.txt  string.c
ffi-example/src/: ffi_adaptor.rs  lib.rs  main.rs
