[package]
name = "ffi-example"
version = "0.1.0"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
c_vec = "2.0"
ffi-example-sys = { path = "../ffi-example-sys" }
wasm-bindgen = "0.2"
